--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,5 +2,6 @@
     <h1 class="text-center">Alurapic</h1>
 </div>
 <div class="container">
-   <img class="img-responsive center-block" src="img/leao.jpg" alt="leão">
+   <foto url="img/leao.jpg" titulo="Leão"></foto>
+   <foto url="img/leao-branco.jpg" titulo="Leão Branco"></foto>
 </div>
