--- a/app/listagem/listagem.component.html
+++ b/app/listagem/listagem.component.html
@@ -6,16 +6,25 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <a [routerLink]="['/cadastro']" class="btn btn-primary">
-                Nova foto
-            </a>
+            <form>
+                 <div class="input-group">
+                    <span class="input-group-btn">
+                        <a [routerLink]="['/cadastro']" class="btn btn-primary">
+                            Nova foto
+                        </a>
+                    </span>
+
+                    <!-- campo para filtrar pelo titulo -->
+                    <input #textoProcurado (keyup)="0" type="search" class="form-control" placeholder="Filtrar pelo título da foto" />
+                </div>
+            </form>
         </div> <!-- fim col-md-12 -->
     </div>
 
     <br />
 
     <div class="row">
-        <painel *ngFor="let foto of fotos" [titulo]="foto.titulo" class="col-md-2">
+        <painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" [titulo]="foto.titulo | uppercase" class="col-md-2">
             <foto [url]="foto.url" [titulo]="foto.titulo"></foto>
         </painel>
     </div>
