--- a/app/cadastro/cadastro.component.html
+++ b/app/cadastro/cadastro.component.html
@@ -1,1 +1,30 @@
-<h1 class="text-center">Cadastro de Fotos</h1>
+<div class="container">
+    <form class="row" (submit)="cadastrar($event)">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>Título</label>
+                <input class="form-control" autocomplete="off"
+                  name="titulo" [(ngModel)]="foto.titulo" />
+            </div>
+
+            <div class="form-group">
+                <label>URL</label>
+                <input class="form-control" autocomplete="off"
+                  name="url" [(ngModel)]="foto.url" />
+            </div>
+
+            <div class="form-group">
+                <label>Descrição</label>
+                <textarea class="form-control" autocomplete="off"
+                  name="descricao" [(ngModel)]="foto.descricao"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">
+                Salvar
+            </button>
+
+            <a [routerLink]="['']" class="btn btn-primary">Voltar</a>
+            <hr>
+        </div>
+    </form>
+</div>
