--- a/app/cadastro/cadastro.component.html
+++ b/app/cadastro/cadastro.component.html
@@ -32,9 +32,7 @@
                   name="descricao" [(ngModel)]="foto.descricao" formControlName="descricao"></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary" [disabled]="formulario.invalid">
-                Salvar
-            </button>
+            <botao tipo="submit" estilo="btn-primary" [desabilitado]="formulario.invalid">Salvar</botao>
 
             <a [routerLink]="['']" class="btn btn-primary">Voltar</a>
             <hr>
