--- a/app/listagem/listagem.component.html
+++ b/app/listagem/listagem.component.html
@@ -29,7 +29,8 @@
             <a [routerLink]="['/cadastro', foto._id]">
                 <foto [url]="foto.url" [titulo]="foto.titulo"></foto>
             </a>
-            <button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>
+            <botao estilo="btn-danger btn-block" (acao)="remove(foto)" confirmacao="true">Remover</botao>
+            <!--<button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>-->
         </painel>
     </div>
 </div>
