--- a/app/listagem/listagem.component.html
+++ b/app/listagem/listagem.component.html
@@ -25,12 +25,12 @@
     <br />
 
     <div class="row">
-        <painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" [titulo]="foto.titulo | uppercase" class="col-md-2">
+        <painel #painel *ngFor="let foto of fotos | filtroPorTitulo: textoProcurado.value" [titulo]="foto.titulo | uppercase" class="col-md-2">
             <a [routerLink]="['/cadastro', foto._id]">
                 <foto [url]="foto.url" [titulo]="foto.titulo"></foto>
             </a>
-            <botao estilo="btn-danger btn-block" (acao)="remove(foto)" confirmacao="true">Remover</botao>
-            <!--<button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>-->
+            <botao estilo="btn-danger btn-block" (acao)="modal.show()" [confirmacao]="false">Remover</botao>
+            <modal #modal frase="Tem certeza que deseja remover esta foto?" (confirma)="remove(foto, painel)"></modal>
         </painel>
     </div>
 </div>
